# ciel-omega-demo

./: .gitignore  AGENT.md  AGENT3.md  AGENT4.md  LICENSE  README.md  adam_memory.json  ciel_cli.py  ciel_omega_app.py  mission_tracker.json  pyproject.toml  requirements.txt
.github/workflows/: build_bundles.yml
.workload/: README.md  cielnofft.py  cielquantum.py  definitekernel.py  ext1.py  ext10.py  ext17.py  ext18.py  ext19.py  ext2.py  ext20.py  ext21.py  ext3.py  ext4.py  ext5.py  ext6.py  ext7.py  ext8.py  ext9.py  extemot.py  extfwcku.py  lie4full.py  paradoxes.py  parlie4.py
contracts/: AUDIT_SCHEMA.yaml  CIEL_ETHICS_AND_SEMANTIC_ACTION_ALGORITHM.md  IMMUTABILITY_POLICY.md  SEMANTIC_ACTION_REFERENCE_CARD.md  relational_contract.yaml
docs/: INDEX.md  OBJECT_CARDS.md  OMEGA_COCKPIT_1_0.md  REPORT_LOCAL_DEBUG_2026-03-25.md  index.html  orbital_live.html  orbital_manifest.json
docs/agent4/: INDEXING_AND_HOLONOMY_PLAN.md  INVENTORY_SEED.md  index_registry_seed.yaml  inventory_seed.yaml
docs/analogies/: ANALOGY_REGISTRY.md  MNEMONIC_BOOK_FOR_KIDS.md  README.md  TRUTH_ATTRACTOR_ANALOGIES.md
main/: installer_linux.py
raporty/: raport1.md  raport2.md  raport3.md  raport4.md  raport5.md
scripts/: build_bundle.ps1  build_bundle.py  build_bundle.sh  build_installer_elf_linux.sh  entry_omega.py  entry_omega_runpy.py  export_orbital_manifest.sh  install_local.cmd  install_local.ps1  install_local.sh  installer_elf_linux.c  run_cli.cmd  run_cli.ps1  run_cli.sh  run_orbital_ui.cmd  run_orbital_ui.ps1  run_orbital_ui.sh  run_ui.cmd  run_ui.ps1  run_ui.sh
(+50 files in other folders)
