[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ciel"
version = "0.1.0"
description = "CIEL local demo client (CLI + NiceGUI)"
requires-python = ">=3.11"
dependencies = [
  "nicegui>=2.0.0",
  "numpy>=1.24.0",
  "psutil>=5.9.0",
  "requests>=2.31.0",
  "pypdf>=4.0.0",
  "python-docx>=1.1.0",
  "python-multipart>=0.0.7",
]

[project.optional-dependencies]
llama = [
  "llama-cpp-python",
]
bundle = [
  "pyinstaller>=6.0.0",
]

[project.scripts]
ciel-cli = "main.apps.cli:main"
ciel-omega = "main.apps.omega_app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["main*"]

[tool.setuptools.package-data]
"main" = ["Logo1.png"]
